--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,20 +3,15 @@ version: '3'
 services:
 
   nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile.prod
-    image: davideveloper123/nginx:prod
-    container_name: nginx
+    image: nginx-davi
+    container_name: nginx-davi
     networks:
       - node-network
     ports:
       - "8080:80"
   app:
-    build:
-      context: node
+    image: node-davi
     container_name: app
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
     networks:
       - node-network
     volumes:
