--- a/node/package.json
+++ b/node/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +11,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "faker": "^6.6.6",
+    "faker-br": "^0.4.1",
     "mysql": "^2.18.1"
-  },
-  "devDependencies": {},
-  "description": ""
+  }
 }
