--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       - node-network
     volumes:
       - ./node:/usr/src/app
+      - ./node/node_modules:/usr/src/app/node/node_modules
     tty: true
     ports:
       - "3000:3000"
